# qubo

qubo/cmake/: CMakeLists.txt
qubo/makefile/: makefile
qubo/source/: main.cpp  qubo.cpp  qubo.hpp  util_serial_loop.cpp  util_serial_loop.hpp
qubo/vs2022/qubo/: qubo.sln
qubo/vs2022/qubo/qubo/: qubo.vcxproj  qubo.vcxproj.filters
